--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,6 +1,8 @@
+html,
 body {
-  padding: 0;
+  overflow-x: hidden;
   margin: 0;
+  padding: 0;
 }
 
 h2 {
@@ -12,6 +14,21 @@ ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
+}
+
+li {
+  font-family: "Montserrat", serif;
+  margin: 0;
+}
+
+label {
+  font-family: "Montserrat", serif;
+  margin: 0;
+}
+
+input {
+  outline: none;
+  font-family: "Montserrat", serif;
 }
 
 li {
