--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -10,6 +10,11 @@ h2 {
   margin: 0;
 }
 
+span {
+  font-family: "Montserrat", serif;
+  margin: 0;
+}
+
 ul {
   list-style-type: none;
   margin: 0;
