--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -88,3 +88,13 @@ td {
 .table-container::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
+
+.black-fon {
+  position: fixed;
+  z-index: 5;
+  width: 100%;
+  height: 100vh;
+  background: rgba(117, 117, 117, 0.3);
+  top: 0;
+  left: 0;
+}
