--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -10,6 +10,11 @@ h2 {
   margin: 0;
 }
 
+h1 {
+  font-family: "Montserrat", serif;
+  margin: 0;
+}
+
 h3 {
   font-family: "Montserrat", serif;
   margin: 0;
