--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -95,8 +95,39 @@ td {
   width: 100%;
   height: 100vh;
   background: rgba(117, 117, 117, 0.3);
+  backdrop-filter: blur(1px); /* Добавляем размытие */
+  -webkit-backdrop-filter: blur(1px); /* Для поддержки в Safari */
   top: 0;
   left: 0;
+  transition: all 0.25s;
+}
+
+.black-fon,
+.fade-leave-active {
+  transition: opacity 0.5s ease;
+}
+.black-fon,
+.fade-leave-to {
+  opacity: 0;
+}
+
+.black-fon {
+  animation: fadeIn 0.5s forwards;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.line {
+  background-color: #d9d9d9;
+  height: 1px;
+  margin: 12px 0 16px;
 }
 
 .pointer {
