--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,6 +4,69 @@ body {
   margin: 0;
   padding: 0;
   font-family: system-ui;
+  /* background-color: #1f2937; */
+}
+
+:root {
+  /* Светлая тема (по умолчанию) */
+  --bg: #ffffff;
+  --text: #333333;
+  --primary: #4285f4;
+  --svgColor: #6b7280;
+  --textNavHover: #eeeeee;
+  --iconNavHover: #111827;
+  --headerAccount: #f9f9f9;
+  --headerAccountButtonColor: oklch(0.4 0.18 267 / 0.86);
+  --headerAccountText: #6b7280;
+  --tableAccountBg: rgb(243, 244, 246);
+  --noAccountTableBg: #ebf5ff;
+  --noAccountTableText: #17388d;
+  --noAccountTableHover: rgb(243 244 246);
+  --tabletextcolor: #000;
+  --line: white;
+  --tableHover: #ebebeb;
+  --tableActiveButton: oklch(0.65 0.22 267 / 0.16);
+  --tableActiveButtonColor: oklch(0.4 0.18 267 / 0.86);
+  --backgroundComponentModal: rgba(117, 117, 117, 0.3);
+}
+
+[data-theme="dark"] {
+  /* Тёмная тема */
+  --bg: #1f2937;
+  --body: oklch(0.17 0.001 267);
+  --text: #ffffff;
+  --headerAccount: #272727;
+  --headerAccountButtonColor: #ffffff;
+  --tableAccountBg: #323a46;
+  --headerAccountText: #d4d4d4;
+  --textNavHover: #323a46;
+  --iconNavHover: #ffffff;
+  --primary: #8ab4f8;
+  --svgColor: #b2b4b8;
+  --line: #41546e;
+  --noAccountTableBg: #1d2127;
+  --noAccountTableText: #bebebe;
+  --noAccountTableHover: #323a46;
+  --tabletextcolor: #ffffff;
+  --tableHover: #2c3a4d;
+  --tableActiveButton: #2b3d57;
+  --tableActiveButtonColor: #929292;
+  --backgroundComponentModal: rgba(0, 0, 0, 0.3);
+}
+
+thead {
+  background: var(--tableAccountBg);
+}
+/* 
+tr:hover {
+  background: var(--noAccountTableHover);
+  position: static;
+} */
+
+body {
+  background: var(--body);
+  color: var(--text);
+  transition: all 0.3s ease;
 }
 
 h2 {
@@ -94,7 +157,7 @@ td {
   z-index: 5;
   width: 100%;
   height: 100vh;
-  background: rgba(117, 117, 117, 0.3);
+  background: var(--backgroundComponentModal);
   backdrop-filter: blur(1px); /* Добавляем размытие */
   -webkit-backdrop-filter: blur(1px); /* Для поддержки в Safari */
   top: 0;
