--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -28,6 +28,10 @@ body {
   --tableActiveButton: oklch(0.65 0.22 267 / 0.16);
   --tableActiveButtonColor: oklch(0.4 0.18 267 / 0.86);
   --backgroundComponentModal: rgba(117, 117, 117, 0.3);
+  --modalColor: black;
+  --modalBg: white;
+  --scrolBg: #e1e1e1;
+  --scrolColor: rgb(180, 180, 180);
 }
 
 [data-theme="dark"] {
@@ -52,6 +56,10 @@ body {
   --tableActiveButton: #2b3d57;
   --tableActiveButtonColor: #929292;
   --backgroundComponentModal: rgba(0, 0, 0, 0.3);
+  --modalColor: white;
+  --modalBg: #1a1a1a;
+  --scrolBg: #242f3e;
+  --scrolColor: #1b222c;
 }
 
 thead {
@@ -129,10 +137,10 @@ td {
 }
 
 .table-container {
-  scrollbar-width: thin;
-  scrollbar-color: #888 #f1f1f1;
+  /* scrollbar-width: thin; */
+  /* scrollbar-color: #888 #f1f1f1; */
 }
-
+/* 
 .table-container::-webkit-scrollbar {
   width: 12px;
   height: 12px;
@@ -150,7 +158,7 @@ td {
 
 .table-container::-webkit-scrollbar-thumb:hover {
   background: #555;
-}
+} */
 
 .black-fon {
   position: fixed;
